modules/gdscript/tests/scripts/analyzer/errors/nullable_forbid_assigment_with_nullable_access_operator.gd
class A:
    var b: String
func test():
    var a: A? = A.new()
    a?.b = "123"